fixed overlapping css

--- a/frontend/src/HomePage.css
+++ b/frontend/src/HomePage.css
@@ -28,3 +28,7 @@ body {
 [type=button]:hover {
     color: #FFD706;
 }
+
+#logoutButton{
+    box-shadow: none;
+}
