--- a/frontend/src/components/AccountPage.css
+++ b/frontend/src/components/AccountPage.css
@@ -72,6 +72,9 @@ a{
 
 .accButtons{
 	justify-content: center;
+	text-align: center;
+	display: inline-flex; /* keep the inline nature of buttons */
+    align-items: flex-start; /* this is default */
 }
 
 #accountAccBtn{
@@ -83,6 +86,7 @@ a{
 	background: #E5E5E5;
 	border-radius: 23px;
 	margin: auto;
+	color: black
 }
 
 #accountchangePassBtn{
@@ -94,6 +98,7 @@ a{
 	background: white;
 	border-radius: 23px;
 	margin: auto;
+	color: black
 }
 
 #accountchangeEmailBtn{
@@ -105,6 +110,7 @@ a{
 	background: white;
 	border-radius: 23px;
 	margin: auto;
+	color: black
 }
 
 #logoutButton{
